--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "chokidar": "^1.7.0",
     "configr8": "^1.0.0-alpha.7",
+    "glob-parent": "^3.1.0",
+    "globby": "^6.1.0",
     "try-require": "^1.2.1"
   }
 }
