--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "configr8": "^1.0.0-alpha.7",
     "glob-parent": "^3.1.0",
     "globby": "^6.1.0",
-    "type-of": "^2.0.1"
+    "type-of": "^2.0.1",
+    "uuid": "^3.1.0"
   }
 }
