Extracted may-require and calling-file as modules

--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "tape-catch": "^1.0.6"
   },
   "dependencies": {
-    "callsites": "^2.0.0",
+    "calling-file": "^1.0.0",
     "configr8": "^1.0.0-alpha.7",
     "glob-parent": "^3.1.0",
     "globby": "^6.1.0",
+    "may-require": "^1.0.0",
     "mime": "^2.0.3",
     "request": "^2.83.0",
-    "resolve-from": "^4.0.0",
-    "sane": "^2.2.0",
     "type-of": "^2.0.1",
     "uuid": "^3.1.0"
   },
   "optionalDependencies": {
-    "@atom/nsfw": "^1.0.18"
+    "@atom/nsfw": "^1.0.18",
+    "sane": "^2.2.0"
   }
 }
