--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mime": "^2.0.3",
     "request": "^2.83.0",
     "type-of": "^2.0.1",
+    "unixify": "^1.0.0",
     "uuid": "^3.1.0"
   },
   "optionalDependencies": {
