--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0-alpha.0",
   "description": "Intelligent mocking with a purpose",
   "main": "index.js",
+  "bin": {
+    "satire": "./cli/satire.js"
+  },
   "scripts": {
     "test": "nyc tape test/**/*-test.js"
   },
@@ -23,11 +26,12 @@
     "chokidar": "^1.7.0",
     "configr8": "^1.0.0-alpha.7",
     "glob-parent": "^3.1.0",
-    "globby": "^6.1.0",
+    "klaw": "^2.1.0",
     "may-require": "^1.0.0",
     "micromatch": "^3.1.4",
     "mime": "^2.0.3",
     "request": "^2.83.0",
+    "trike": "^1.0.0",
     "type-of": "^2.0.1",
     "unixify": "^1.0.0",
     "uuid": "^3.1.0"
